--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-# 菲斯玛VIESMAR官网 Nginx配置
+# 菲斯玛VIESMAR官网 Nginx配置 - 安全加固版
 
 events {
     worker_connections 1024;
@@ -7,6 +7,16 @@ events {
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
+    
+    # 安全配置
+    server_tokens off;
+    client_max_body_size 10M;
+    client_body_buffer_size 128k;
+    
+    # 速率限制
+    limit_req_zone $binary_remote_addr zone=login:10m rate=1r/s;
+    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=general:10m rate=5r/s;
 
     # 日志格式
     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
@@ -69,12 +79,14 @@ http {
         ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
         ssl_prefer_server_ciphers off;
 
-        # 安全头
-        add_header Strict-Transport-Security "max-age=63072000" always;
-        add_header X-Frame-Options DENY;
-        add_header X-Content-Type-Options nosniff;
-        add_header X-XSS-Protection "1; mode=block";
-        add_header Referrer-Policy "strict-origin-when-cross-origin";
+        # 安全头部增强
+        add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self';" always;
+        add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
 
         # 根目录配置
         location / {
